speedtest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-service
spec:
  selector:
    app: speedtest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-pmhoci-service
spec:
  selector:
    app: speedtest
    node: pmhoci
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-pmhoci2-service
spec:
  selector:
    app: speedtest
    node: pmhoci2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
