speedtest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: speed.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-service
            port:
              number: 80
  - host: pmhoci.speed.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-pmhoci-service
            port:
              number: 80
  - host: pmhoci2.speed.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-pmhoci2-service
            port:
              number: 80
